--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,184 @@
-html,
+@font-face {
+    font-family: 'TT Commons Regular';
+    src: url('../fonts/tt_commons_classic_regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'TT Commons Demi';
+    src: url('../fonts/tt_commons_classic_demibold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Gilroy Bold';
+    src: url('../fonts/gilroy-bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    font-family: "TT Commons Regular", sans-serif;
+    font-size: 16px;
+    line-height: 1.5em;
+    letter-spacing: 0;
+    color: #1A1A1A;
+    background: #FAFAFA;
+    -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: transparent;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+main {
+    width: 100%;
+    max-width: 1920px;
+    padding: 0;
+    margin: 0 auto;
 }
 
-* {
-  box-sizing: border-box;
+h1,
+h2,
+h3,
+.heavy {
+    font-family: "Gilroy Bold", sans-serif;
+}
+
+h4,
+h5,
+h6,
+a,
+strong,
+.bold {
+    font-family: "TT Commons Demi", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 0;
+}
+
+h1,
+h3,
+h4,
+h5,
+h6 {
+    margin-bottom: 0.5em;
+}
+
+h1 {
+    font-size: 3em;
+}
+
+h2 {
+    font-size: 2.75em;
+    margin-bottom: 0.2em;
+}
+
+h3 {
+    font-size: 2.4em;
+    margin-bottom: 0.2em;
+}
+
+h4,
+strong {
+    font-size: 1.15em;
+}
+
+h5 {
+    font-size: 1em;
+}
+
+p {
+    font-size: 1.125em;
+    margin-top: 0;
+    margin-bottom: 1em;
+    color: #404040;
+}
+
+/*list styling*/
+li {
+    line-height: 1.25em;
+}
+
+ul > li {
+    padding-left: 0.5em;
+}
+
+ol {
+    padding-left: 2.15em;
+}
+
+ol > li {
+    padding-left: 0.85em;
+}
+
+a,
+a:hover,
+a:focus {
+    text-decoration: none;
+}
+
+.italic {
+    font-style: italic;
+}
+
+/* link styling */
+.activeLink {
+    color: #004080;
+    transition: background 0.225s ease-out;
+    -webkit-transition: background 0.225s ease-out;
+    -moz-transition: background 0.225s ease-out;
+    -o-transition: background 0.225s ease-out;
+}
+
+.activeLink:hover {
+    background: #CFE7FF;
+}
+
+/* scrollbar styling */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #004080;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #FAFAFA;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #C4C4C4;
 }
