update package files, rework component library stylesheets

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,64 +1,64 @@
+/*
+// 768px - md
+// 992px - lg
+// 1200px - xl
+*/
+
 .container {
     display: flex;
     flex-direction: column-reverse;
     width: 100vw;
     margin: 0 0 110px 0;
     overflow: hidden;
-}
 
-.image {
-    width: 100%;
-}
-
-.text {
-    padding: 40px 12% 0 12%;
-}
-
-/* md breakpoint */
-@media (min-width: 768px) {
-    .container {
+    @media (min-width: 768px) {
         margin: 0 0 120px 0;
     }
-    .image {
-        height: auto;
-    }
-    .text {
-        padding: 40px 20% 0 20%;
-    }
-}
 
-/* lg breakpoint */
-@media (min-width: 992px) {
-    .container {
+    @media (min-width: 992px) {
         flex-direction: row;
         width: 100%;
         margin-bottom: 250px;
         padding-left: 14vw;
     }
-    .image, .text {
-        margin: 0;
+
+    @media (min-width: 1200px) {
+        padding-left: 20vw;
     }
-    .image {
+}
+
+.image {
+    width: 100%;
+
+    @media (min-width: 768px) {
+        height: auto;
+    }
+
+    @media (min-width: 992px) {
         width: 424px;
         height: auto;
+        margin: 0;
         transition: margin 0.15s ease-out;
         -webkit-transition: margin 0.15s ease-out;
         -moz-transition: margin 0.15s ease-out;
         -o-transition: margin 0.15s ease-out;
-    }
-    .image:hover {
-        margin-left: 16px;
-    }
-    .text {
-        width: 42%;
-        padding: 16px 8% 0 0;
+        &:hover {
+            margin-left: 16px;
+        }
     }
 }
 
-/* xl breakpoint */
-@media (min-width: 1200px) {
-    .container {
-        padding-left: 20vw;
+.text {
+    padding: 40px 12% 0 12%;
+
+    @media (min-width: 768px) {
+        padding: 40px 20% 0 20%;
+    }
+
+    @media (min-width: 992px) {
+        width: 42%;
+        padding: 16px 8% 0 0;
+        margin: 0;
     }
 }
 
