clean up global stylesheet, introduce style mixins

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,27 +1,40 @@
-@font-face {
-    font-family: 'TT Commons Regular';
-    src: url('../fonts/tt_commons_classic_regular.woff') format('woff');
+// colours
+$dark-cerulean: #004080;
+$background-color: #FAFAFA;
+$default-font-color: #1A1A1A;
+$body-font-color: #404040;
+$hover-color: #CFE7FF;
+
+// fonts
+$heavy-font: "Gilroy Bold", sans-serif;
+$bold-font: "TT Commons Demi", sans-serif;
+$regular-font: "TT Commons Regular", sans-serif;
+
+@mixin font-onload {
     font-weight: normal;
     font-style: normal;
     font-display: swap;
+}
+
+@font-face {
+    font-family: 'TT Commons Regular';
+    src: url('../fonts/tt_commons_classic_regular.woff') format('woff');
+    @include font-onload;
 }
 
 @font-face {
     font-family: 'TT Commons Demi';
     src: url('../fonts/tt_commons_classic_demibold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+    @include font-onload;
 }
 
 @font-face {
     font-family: 'Gilroy Bold';
     src: url('../fonts/gilroy-bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+    @include font-onload;
 }
 
+// space styling
 *,
 *::before,
 *::after {
@@ -33,12 +46,12 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    font-family: "TT Commons Regular", sans-serif;
+    font-family: $regular-font;
     font-size: 16px;
     line-height: 1.5em;
     letter-spacing: 0;
-    color: #1A1A1A;
-    background: #FAFAFA;
+    color: $default-font-color;
+    background: $background-color;
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     -webkit-tap-highlight-color: transparent;
@@ -52,11 +65,31 @@ main {
     margin: 0 auto;
 }
 
+// link styling
+a,
+a:hover,
+a:focus {
+    text-decoration: none;
+}
+
+.activeLink {
+    color: $dark-cerulean;
+    transition: background 0.225s ease-out;
+    -webkit-transition: background 0.225s ease-out;
+    -moz-transition: background 0.225s ease-out;
+    -o-transition: background 0.225s ease-out;
+
+    &:hover {
+        background: $hover-color;
+    }
+}
+
+// typography
 h1,
 h2,
 h3,
 .heavy {
-    font-family: "Gilroy Bold", sans-serif;
+    font-family: $heavy-font;
 }
 
 h4,
@@ -65,7 +98,7 @@ h6,
 a,
 strong,
 .bold {
-    font-family: "TT Commons Demi", sans-serif;
+    font-family: $bold-font;
 }
 
 h1,
@@ -123,60 +156,43 @@ p {
     font-size: 1.125em;
     margin-top: 0;
     margin-bottom: 1em;
-    color: #404040;
-}
-
-/*list styling*/
-li {
-    line-height: 1.25em;
-}
-
-ul > li {
-    padding-left: 0.5em;
-}
-
-ol {
-    padding-left: 2.15em;
-}
-
-ol > li {
-    padding-left: 0.85em;
-}
-
-a,
-a:hover,
-a:focus {
-    text-decoration: none;
+    color: $body-font-color;
 }
 
 .italic {
     font-style: italic;
 }
 
-/* link styling */
-.activeLink {
-    color: #004080;
-    transition: background 0.225s ease-out;
-    -webkit-transition: background 0.225s ease-out;
-    -moz-transition: background 0.225s ease-out;
-    -o-transition: background 0.225s ease-out;
+// list styling
+li {
+    line-height: 1.25em;
 }
 
-.activeLink:hover {
-    background: #CFE7FF;
+ul {
+    & > li {
+        padding-left: 0.5em;
+    }
 }
 
-/* scrollbar styling */
+ol {
+    padding-left: 2.15em;
+
+    & > li {
+        padding-left: 0.85em;
+    }
+}
+
+// scrollbar styling
 ::-webkit-scrollbar {
     width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #004080;
+    background: $dark-cerulean;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #FAFAFA;
+    background: $background-color;
 }
 
 ::-webkit-scrollbar-thumb:hover {
