--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,6 +3,7 @@
 /  992px - lg
 /  1200px - xl
 */
+@use 'styles/styles';
 
 .intro {
     width: 100vw;
@@ -73,5 +74,5 @@
 
 /* font styling overrides */
 .greeting {
-    color: #004080;
+    color: styles.$dark-cerulean;
 }
