unify design system

--- a/src/components/BlueBlock/BlueBlock.module.scss
+++ b/src/components/BlueBlock/BlueBlock.module.scss
@@ -1,6 +1,7 @@
 /*
 /  992px - lg
 */
+@use 'styles/styles';
 
 .block {
     display: none;
@@ -11,7 +12,7 @@
         left: 58.5%;
         right: 0;
         bottom: 0;
-        background-color: #004080;
+        background-color: styles.$color-dark-cerulean;
         z-index: -10;
     }
 }
