--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,12 +23,14 @@
 }
 
 // font vars
-$heavy-font: "Gilroy Bold", sans-serif;
-$bold-font: "TT Commons Demi", sans-serif;
-$regular-font: "TT Commons Regular", sans-serif;
+$font-heavy: "Gilroy Bold", sans-serif;
+$font-bold: "TT Commons Demi", sans-serif;
+$font-regular: "TT Commons Regular", sans-serif;
 
 // colours
-$dark-cerulean: #004080;
+$color-dark-cerulean: #004080;
+$color-olive: #7C6900;
+$color-white: #FFFFFF;
 $background-color: #FAFAFA;
 $default-font-color: #1A1A1A;
 $body-font-color: #404040;
