clean up stylesheet semantics

--- a/src/components/BlueBlock/BlueBlock.module.scss
+++ b/src/components/BlueBlock/BlueBlock.module.scss
@@ -12,7 +12,7 @@
         left: 58.5%;
         right: 0;
         bottom: 0;
-        background-color: styles.$color-dark-cerulean;
+        background-color: styles.$primary-color;
         z-index: -10;
     }
 }
