--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,18 +25,21 @@ $scrollbar-hover-color: #C4C4C4;
 
 @font-face {
     font-family: 'TT Commons Regular';
+    src: url('../fonts/tt_commons_classic_regular.woff2') format('woff2');
     src: url('../fonts/tt_commons_classic_regular.woff') format('woff');
     @include font-onload;
 }
 
 @font-face {
     font-family: 'TT Commons Demi';
+    src: url('../fonts/tt_commons_classic_demibold.woff2') format('woff2');
     src: url('../fonts/tt_commons_classic_demibold.woff') format('woff');
     @include font-onload;
 }
 
 @font-face {
     font-family: 'Gilroy Bold';
+    src: url('../fonts/gilroy-bold.woff2') format('woff2');
     src: url('../fonts/gilroy-bold.woff') format('woff');
     @include font-onload;
 }
