tweak styling semantics

--- a/src/components/QuickLinks/QuickLinks.module.scss
+++ b/src/components/QuickLinks/QuickLinks.module.scss
@@ -54,5 +54,5 @@
 .currentLink {
     background: styles.$primary-color !important;
     font-family: styles.$font-heavy;
-    color: styles.$color-white;
+    color: styles.$light-font-color;
 }
