--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,7 +11,7 @@ $background-color: #FAFAFA;
 // font palette
 $default-font-color: #1A1A1A;
 $body-font-color: #404040;
-$color-white: #FFFFFF;
+$light-font-color: #FFFFFF;
 
 // hover palette
 $link-hover-color: #CFE7FF;
