--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -44,6 +44,6 @@
     @media (min-width: 992px) {
         position: relative;
         @include no-margin;
-        color: styles.$color-white;
+        color: styles.$light-font-color;
     }
 }
