--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,9 +17,7 @@ $light-font-color: #FFFFFF;
 $link-hover-color: #CFE7FF;
 $scrollbar-hover-color: #C4C4C4;
 
-@mixin font-onload {
-    font-weight: normal;
-    font-style: normal;
+@mixin font-display {
     font-display: swap;
 }
 
@@ -28,7 +26,7 @@ $scrollbar-hover-color: #C4C4C4;
     src: 
         url('../fonts/tt_commons_classic_regular.woff2') format('woff2'),
         url('../fonts/tt_commons_classic_regular.woff') format('woff');
-    @include font-onload;
+    @include font-display;
 }
 
 @font-face {
@@ -36,7 +34,7 @@ $scrollbar-hover-color: #C4C4C4;
     src:
         url('../fonts/tt_commons_classic_demibold.woff2') format('woff2'),
         url('../fonts/tt_commons_classic_demibold.woff') format('woff');
-    @include font-onload;
+    @include font-display;
 }
 
 @font-face {
@@ -44,5 +42,5 @@ $scrollbar-hover-color: #C4C4C4;
     src: 
         url('../fonts/gilroy-bold.woff2') format('woff2'),
         url('../fonts/gilroy-bold.woff') format('woff');
-    @include font-onload;
+    @include font-display;
 }
