clean up stylesheet

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,7 +1,7 @@
 // fonts
-$font-heavy: "Gilroy Bold", sans-serif;
-$font-bold: "TT Commons Demi", sans-serif;
-$font-regular: "TT Commons Regular", sans-serif;
+$font-heavy: 'Gilroy Bold', sans-serif;
+$font-bold: 'TT Commons Demi', sans-serif;
+$font-regular: 'TT Commons Regular', sans-serif;
 
 // main palette
 $primary-color: #004080;
