--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column-reverse;
     width: 100vw;
-    margin: 0 0 110px 0;
+    margin: 0 0 120px 0;
     overflow: hidden;
 
     @media (min-width: 768px) {
@@ -67,4 +67,8 @@
 .title {
     font-size: 2em;
     margin-bottom: 0.2em;
+}
+
+.link {
+    font-size: 1.0625em;
 }
