--- a/src/components/Content/Image.module.scss
+++ b/src/components/Content/Image.module.scss
@@ -12,7 +12,7 @@
     margin: 4px auto 20px;
 
     @media (min-width: 768px) {
-        margin: 28px auto 28px;
+        margin: 28px 0px;
     }
 }
 
