--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -8,11 +8,11 @@
     display: flex;
     flex-direction: column-reverse;
     width: 100vw;
-    margin: 0 0 120px 0;
+    margin: 0 0 120px;
     overflow: hidden;
 
     @media (min-width: 768px) {
-        margin: 0 0 120px 0;
+        margin: 0 0 120px;
     }
 
     @media (min-width: 992px) {
@@ -20,6 +20,7 @@
         width: 100%;
         margin-bottom: 250px;
         padding-left: 14vw;
+        overflow: visible;
     }
 
     @media (min-width: 1200px) {
@@ -38,6 +39,7 @@
         width: 424px;
         height: auto;
         margin: 0;
+        border-radius: 18px;
         transition: margin 0.15s ease-out;
         -webkit-transition: margin 0.15s ease-out;
         -moz-transition: margin 0.15s ease-out;
