rework font weight scss naming

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -28,7 +28,7 @@
 }
 
 .brand {
-    font-family: styles.$font-heavy;
+    font-family: styles.$font-bold;
     font-size: 1.4em;
 
     .firstName {
