--- a/src/components/QuickLinks/QuickLinks.module.scss
+++ b/src/components/QuickLinks/QuickLinks.module.scss
@@ -53,6 +53,6 @@
 
 .currentLink {
     background: styles.$primary-color !important;
-    font-family: styles.$font-heavy;
+    font-family: styles.$font-bold;
     color: styles.$light-font-color;
 }
