--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -64,7 +64,7 @@ h1,
 h2,
 h3,
 .heavy {
-    font-family: styles.$font-heavy;
+    font-family: styles.$font-bold;
 }
 
 h4,
@@ -73,7 +73,7 @@ h6,
 a,
 strong,
 .bold {
-    font-family: styles.$font-bold;
+    font-family: styles.$font-medium;
 }
 
 h1,
