--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,6 @@
 // fonts
-$font-heavy: 'Gilroy Bold', sans-serif;
-$font-bold: 'TT Commons Demi', sans-serif;
+$font-bold: 'Gilroy Bold', sans-serif;
+$font-medium: 'TT Commons Demi', sans-serif;
 $font-regular: 'TT Commons Regular', sans-serif;
 
 // main palette
